policy/pod-aware-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Controls usage of host network namespace by pod containers. Specific
      ports must be specified. Corresponds to the `hostNetwork` and `hostPorts` fields
      in a PodSecurityPolicy. For more information, see https://kubernetes.io/docs/concepts/policy/pod-security-policy/#host-namespaces
    metadata.gatekeeper.sh/title: Host Networking Ports
    metadata.gatekeeper.sh/version: 1.0.1
  name: k8spsphostnetworkingportscontrolleraware
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostNetworkingPortsControllerAware
      validation:
        openAPIV3Schema:
          description: Controls usage of host network namespace by pod containers.
            Specific ports must be specified. Corresponds to the `hostNetwork` and
            `hostPorts` fields in a PodSecurityPolicy. For more information, see https://kubernetes.io/docs/concepts/policy/pod-security-policy/#host-namespaces
          properties:
            exemptImages:
              description: |-
                Any container that uses an image that matches an entry in this list will be excluded from enforcement. Prefix-matching can be signified with `*`. For example: `my-image-*`.
                It is recommended that users use the fully-qualified Docker image name (e.g. start with a domain name) in order to avoid unexpectedly exempting images from an untrusted repository.
              items:
                type: string
              type: array
            hostNetwork:
              description: Determines if the policy allows the use of HostNetwork
                in the pod spec.
              type: boolean
            max:
              description: The end of the allowed port range, inclusive.
              type: integer
            min:
              description: The start of the allowed port range, inclusive.
              type: integer
          type: object
  targets:
  - libs:
    - |
      package lib.exclude_update

      is_update(review) {
          review.operation == "UPDATE"
      }
    - |
      package lib.exempt_container

      is_exempt(container) {
          exempt_images := object.get(object.get(input, "parameters", {}), "exemptImages", [])
          img := container.image
          exemption := exempt_images[_]
          _matches_exemption(img, exemption)
      }

      _matches_exemption(img, exemption) {
          not endswith(exemption, "*")
          exemption == img
      }

      _matches_exemption(img, exemption) {
          endswith(exemption, "*")
          prefix := trim_suffix(exemption, "*")
          startswith(img, prefix)
      }
    rego: |
      package k8spsphostnetworkingports

      import data.lib.exclude_update.is_update
      import data.lib.exempt_container.is_exempt

      violation[{"msg": msg, "details": {}}] {
          # spec.hostNetwork field is immutable.
          not is_update(input.review)

          input_share_hostnetwork(input.review.object)
          msg := sprintf("The specified hostNetwork and hostPort are not allowed, pod: %v. Allowed values: %v", [input.review.object.metadata.name, input.parameters])
      }

      input_share_hostnetwork(o) {
          not input.parameters.hostNetwork
          o.spec.hostNetwork
      }

      input_share_hostnetwork(o) {
          hostPort := input_containers[_].ports[_].hostPort
          hostPort < input.parameters.min
      }

      input_share_hostnetwork(o) {
          hostPort := input_containers[_].ports[_].hostPort
          hostPort > input.parameters.max
      }

      input_containers[c] {
          c := input.review.object.spec.containers[_]
          not is_exempt(c)
      }

      input_containers[c] {
          c := input.review.object.spec.initContainers[_]
          not is_exempt(c)
      }

      input_containers[c] {
          c := input.review.object.spec.ephemeralContainers[_]
          not is_exempt(c)
      }

      input_containers[c] {
          c := input.review.object.spec.template.spec.containers[_]
          not is_exempt(c)
      }
    target: admission.k8s.gatekeeper.sh
